Fix breadcrumb alignment refs #17207

--- a/src/global_styles.css
+++ b/src/global_styles.css
@@ -64,6 +64,11 @@ img {
   display: none;
 }
 
+#s-lib-bc-list li:first-child a {
+  display: inline-flex;
+  align-items: center;
+}
+
 #s-lib-bc-list li:first-child a::before {
   content: "";
   display: inline-block;
@@ -73,9 +78,10 @@ img {
   background: url("/images/icons/home.svg") center / contain no-repeat;
 }
 
-#s-lib-bc-list li:first-child a {
-  display: inline-flex;
+#s-lib-bc-page {
+  display: flex;
   align-items: center;
 }
+
 
 /* --- End global styles --- */
